--- a/style.css
+++ b/style.css
@@ -22,12 +22,38 @@ body {
 
 
 header {
-    display:flex;
-    flex-direction: row;
-    background-color: black;
+    position: relative;
+    height: 100px;
+    width: 100%;
+    background-color: black;   
+    
+    font-size: 30px;
+    font-family: eurostile;
+    margin-right: 10px;
+    height: 100px;
+    max-width: 100%;
+  
+}
+
+
+.date {
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    font-size: 20px;
+    top: 50%;
+    transform: translate(-50%, -50%);
     color: white;
-    justify-content: space-evenly;
-    align-items: center;
+    font-family: eurostile;
+}
+
+.login {
+    position: absolute;
+    right: 20px;
+    top: 50%;
+    transform: translateY(-50%);
+}
+
     
 
     font-size: 30px;
